--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jwd-crypto-signals/common",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -9,16 +9,22 @@
   ],
   "scripts": {
     "build": "tsc",
-    "pub": "npm version patch && npm run build && npm publish"
+    "pub": "npm run build && npm publish",
+    "test": "NODE_ENV=test mocha -r ts-node/register test/**/*.test.ts"
   },
   "keywords": [],
   "author": "jesuswebdev",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
+    "mocha": "^9.1.3",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
