--- a/common/package.json
+++ b/common/package.json
@@ -16,6 +16,7 @@
   "author": "jesuswebdev",
   "license": "ISC",
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
