--- a/common/package.json
+++ b/common/package.json
@@ -19,6 +19,7 @@
     "@types/amqplib": "^0.8.2",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
+    "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.4",
@@ -27,5 +28,8 @@
     "mocha": "^9.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "mongoose": "^6.0.14"
   }
 }
