--- a/common/package.json
+++ b/common/package.json
@@ -8,8 +8,10 @@
     "lib/**/*"
   ],
   "scripts": {
+    "version:patch": "npm version patch && git add ./package*.json && git commit -m 'bump common package version'",
     "build": "tsc",
-    "pub": "npm run build && npm publish",
+    "lint": "./node_modules/eslint/bin/eslint.js .",
+    "pub": "npm run version:patch && npm run build && npm publish",
     "test": "NODE_ENV=test mocha -r ts-node/register test/**/*.test.ts"
   },
   "keywords": [],
