--- a/observer/package.json
+++ b/observer/package.json
@@ -8,13 +8,14 @@
     "start": "node ./lib/index",
     "dev": "ts-node ./src/index",
     "docker:build": "tsc && docker build -t jwd-crypto-signals/observer -f ./.Dockerfile .",
+    "docker:run": "docker run --name crypto-signals-observer -d --env-file=./.env jwd-crypto-signals/observer",
+    "docker:rm": "docker stop crypto-signals-observer && docker rm crypto-signals-observer",
     "docker:push": "docker push jwd-crypto-signals/observer"
   },
   "keywords": [],
   "author": "jesuswebdev",
   "license": "ISC",
   "devDependencies": {
-    "@types/amqplib": "^0.8.2",
     "@types/node": "^16.11.11",
     "@types/ws": "^8.2.1",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
@@ -25,7 +26,6 @@
   },
   "dependencies": {
     "@jwd-crypto-signals/common": "^1.0.6",
-    "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
     "ws": "^8.3.0"
   }
