--- a/observer/package.json
+++ b/observer/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "prebuild": "rimraf lib",
+    "build": "tsc",
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "start": "node ./lib/index",
     "dev": "ts-node ./src/index",
-    "docker:build": "tsc && docker build -t jwd-crypto-signals/observer -f ./.Dockerfile .",
+    "docker:build": "npm run build && docker build -t jwd-crypto-signals/observer -f ./Dockerfile .",
     "docker:run": "docker run --name crypto-signals-observer -d --env-file=./.env jwd-crypto-signals/observer",
     "docker:rm": "docker stop crypto-signals-observer && docker rm crypto-signals-observer",
     "docker:push": "docker push jwd-crypto-signals/observer"
@@ -17,7 +19,6 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.11.11",
-    "@types/uuid": "^8.3.3",
     "@types/ws": "^8.2.1",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -28,7 +29,7 @@
   "dependencies": {
     "@jwd-crypto-signals/common": "^1.0.6",
     "dotenv": "^10.0.0",
-    "uuid": "^8.3.2",
+    "rimraf": "^3.0.2",
     "ws": "^8.3.0"
   }
 }
