--- a/common/package.json
+++ b/common/package.json
@@ -22,6 +22,7 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.4",
