--- a/common/package.json
+++ b/common/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/chai": "^4.2.22",
+    "@types/hapi__hapi": "^20.0.10",
     "@types/mocha": "^9.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/redis": "^4.0.11",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "amqplib": "^0.8.0",
+    "axios": "^0.24.0",
     "mongoose": "^6.0.14",
     "rimraf": "^3.0.2"
   }
