--- a/observer/package.json
+++ b/observer/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@jwd-crypto-signals/common": "^1.0.6",
     "dotenv": "^10.0.0",
+    "joi": "^17.5.0",
     "rimraf": "^3.0.2",
     "ws": "^8.3.0"
   }
