--- a/candles-processor/package.json
+++ b/candles-processor/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "prebuild": "rimraf lib",
+    "build": "tsc",
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "start": "node ./lib/index",
     "dev": "ts-node ./src/index",
-    "docker:build": "tsc && docker build -t jwd-crypto-signals/candles-processor -f ./.Dockerfile .",
+    "docker:build": "npm run build && docker build -t jwd-crypto-signals/candles-processor -f ./Dockerfile .",
+    "docker:run": "docker run --name crypto-signals-candles-processor -d --env-file=./.env jwd-crypto-signals/candles-processor",
+    "docker:rm": "docker stop crypto-signals-candles-processor && docker rm crypto-signals-candles-processor",
     "docker:push": "docker push jwd-crypto-signals/candles-processor"
   },
   "author": "jesuswebdev",
@@ -24,7 +28,9 @@
     "@hapi/hapi": "^20.2.1",
     "@jwd-crypto-signals/common": "^1.0.6",
     "dotenv": "^10.0.0",
+    "joi": "^17.5.0",
     "redis": "^4.0.1",
+    "rimraf": "^3.0.2",
     "tulind": "^0.8.20"
   }
 }
