--- a/positions-processor/package.json
+++ b/positions-processor/package.json
@@ -27,6 +27,7 @@
     "@hapi/hapi": "^20.2.1",
     "@jwd-crypto-signals/common": "^1.0.29",
     "dotenv": "^10.0.0",
+    "joi": "^17.5.0",
     "mongoose": "^6.1.3",
     "rimraf": "^3.0.2"
   }
