--- a/signals-processor/package.json
+++ b/signals-processor/package.json
@@ -2,7 +2,7 @@
   "name": "signals-processor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "tsc",
