--- a/candles-processor/Dockerfile
+++ b/candles-processor/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:17-alpine as deps
+RUN apk add --update python3 make g++ && rm -rf /var/cache/apk/*
 WORKDIR /usr/app
 COPY ./package*.json ./
 RUN npm ci --only=production
