--- a/signals-processor/package.json
+++ b/signals-processor/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^10.0.0",
     "joi": "^17.5.0",
     "mongoose": "^6.1.3",
+    "redis": "^4.0.1",
     "rimraf": "^3.0.2",
     "uuid": "^8.3.2"
   }
