add lib folder to eslint ignore patterns

--- a/positions-processor/.eslintrc.json
+++ b/positions-processor/.eslintrc.json
@@ -51,5 +51,6 @@
     "no-unneeded-ternary": "error",
     "block-spacing": ["error", "always"],
     "no-multiple-empty-lines": ["error", { "max": 1 }]
-  }
+  },
+  "ignorePatterns": ["lib"]
 }
