--- a/signals-processor/package.json
+++ b/signals-processor/package.json
@@ -31,7 +31,6 @@
     "joi": "^17.5.0",
     "mongoose": "^6.1.3",
     "redis": "^4.0.1",
-    "rimraf": "^3.0.2",
-    "uuid": "^8.3.2"
+    "rimraf": "^3.0.2"
   }
 }
