--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ./observer/.env
     environment:
       - RABBITMQ_SERVICE_HOST=rabbitmq
+      - NODE_ENV=production
     depends_on: 
       - rabbitmq
   candles-processor:
@@ -33,6 +34,7 @@ services:
       - RABBITMQ_SERVICE_HOST=rabbitmq
       - MONGODB_SERVICE_HOST=mongodb
       - REDIS_SERVICE_HOST=redis
+      - NODE_ENV=production
     depends_on: 
       - mongodb
       - redis
@@ -47,6 +49,7 @@ services:
     environment:
       - RABBITMQ_SERVICE_HOST=rabbitmq
       - MONGODB_SERVICE_HOST=mongodb
+      - NODE_ENV=production
     depends_on: 
       - mongodb
       - rabbitmq
@@ -61,9 +64,36 @@ services:
       - RABBITMQ_SERVICE_HOST=rabbitmq
       - MONGODB_SERVICE_HOST=mongodb
       - REDIS_SERVICE_HOST=redis
+      - NODE_ENV=production
     depends_on: 
       - mongodb
       - rabbitmq
       - redis
+  trader:
+    restart: unless-stopped
+    build:
+      context: ./trader/
+      dockerfile: ./Dockerfile
+    env_file:
+      - ./trader/.env
+    environment:
+      - RABBITMQ_SERVICE_HOST=rabbitmq
+      - MONGODB_SERVICE_HOST=mongodb
+      - NODE_ENV=production
+    depends_on: 
+      - mongodb
+      - rabbitmq
+  account-observer:
+    restart: unless-stopped
+    build:
+      context: ./account-observer/
+      dockerfile: ./Dockerfile
+    env_file:
+      - ./account-observer/.env
+    environment:
+      - MONGODB_SERVICE_HOST=mongodb
+      - NODE_ENV=production
+    depends_on: 
+      - mongodb
 volumes:
   db_data:
