--- a/candles-processor/Dockerfile
+++ b/candles-processor/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:17-alpine as deps
+FROM node:lts-alpine as deps
 RUN apk add --update python3 make g++ && rm -rf /var/cache/apk/*
 WORKDIR /usr/app
 COPY ./package*.json ./
 RUN npm ci --only=production
 
-FROM node:17-alpine 
+FROM node:lts-alpine 
 WORKDIR /usr/app
 COPY --from=deps ./usr/app/ ./
 COPY ./lib/ ./lib/
