--- a/trader/Dockerfile
+++ b/trader/Dockerfile
@@ -1,9 +1,9 @@
-FROM node:17-alpine as deps
+FROM node:lts-alpine as deps
 WORKDIR /usr/app
 COPY ./package*.json ./
 RUN npm ci --only=production
 
-FROM node:17-alpine 
+FROM node:lts-alpine 
 WORKDIR /usr/app
 COPY --from=deps ./usr/app/ ./
 COPY ./lib/ ./lib/
