--- a/common/package.json
+++ b/common/package.json
@@ -39,6 +39,7 @@
     "amqplib": "^0.8.0",
     "axios": "^0.24.0",
     "mongoose": "^6.0.14",
+    "nats": "^2.4.0",
     "rimraf": "^3.0.2"
   }
 }
