--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
   redis:
     restart: unless-stopped
     image: redis:latest
-  rabbitmq:
+  message-broker:
     restart: unless-stopped
-    image: rabbitmq:latest
+    image: nats:latest
   observer:
     restart: unless-stopped
     build:
@@ -19,10 +19,10 @@ services:
     env_file:
       - ./observer/.env
     environment:
-      - RABBITMQ_SERVICE_HOST=rabbitmq
+      - MESSAGE_BROKER_SERVICE_HOST=message-broker
       - NODE_ENV=production
     depends_on: 
-      - rabbitmq
+      - message-broker
   candles-processor:
     restart: unless-stopped
     build:
@@ -31,14 +31,14 @@ services:
     env_file:
       - ./candles-processor/.env
     environment:
-      - RABBITMQ_SERVICE_HOST=rabbitmq
+      - MESSAGE_BROKER_SERVICE_HOST=message-broker
       - MONGODB_SERVICE_HOST=mongodb
       - REDIS_SERVICE_HOST=redis
       - NODE_ENV=production
     depends_on: 
       - mongodb
       - redis
-      - rabbitmq
+      - message-broker
   positions-processor:
     restart: unless-stopped
     build:
@@ -47,12 +47,12 @@ services:
     env_file:
       - ./positions-processor/.env
     environment:
-      - RABBITMQ_SERVICE_HOST=rabbitmq
+      - MESSAGE_BROKER_SERVICE_HOST=message-broker
       - MONGODB_SERVICE_HOST=mongodb
       - NODE_ENV=production
     depends_on: 
       - mongodb
-      - rabbitmq
+      - message-broker
   signals-processor:
     restart: unless-stopped
     build:
@@ -61,13 +61,13 @@ services:
     env_file:
       - ./signals-processor/.env
     environment:
-      - RABBITMQ_SERVICE_HOST=rabbitmq
+      - MESSAGE_BROKER_SERVICE_HOST=message-broker
       - MONGODB_SERVICE_HOST=mongodb
       - REDIS_SERVICE_HOST=redis
       - NODE_ENV=production
     depends_on: 
       - mongodb
-      - rabbitmq
+      - message-broker
       - redis
   trader:
     restart: unless-stopped
@@ -77,12 +77,12 @@ services:
     env_file:
       - ./trader/.env
     environment:
-      - RABBITMQ_SERVICE_HOST=rabbitmq
+      - MESSAGE_BROKER_SERVICE_HOST=message-broker
       - MONGODB_SERVICE_HOST=mongodb
       - NODE_ENV=production
     depends_on: 
       - mongodb
-      - rabbitmq
+      - message-broker
   account-observer:
     restart: unless-stopped
     build:
