--- a/candles-processor/package.json
+++ b/candles-processor/package.json
@@ -30,6 +30,7 @@
     "@jwd-crypto-signals/common": "^1.0.6",
     "dotenv": "^10.0.0",
     "joi": "^17.5.0",
+    "mongoose": "^6.1.4",
     "redis": "^4.0.1",
     "rimraf": "^3.0.2",
     "tulind": "^0.8.20"
